--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
 <html>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-47032953-1', 'mralext20.github.io');
+  ga('send', 'pageview');
+
+</script>
 <title>ACE12</title>
 <head><h1><center>ACE12</center></h1></head>
 <body>
