removed things, started lists.

--- a/template.html
+++ b/template.html
@@ -1,18 +1,9 @@
 <html>
 <meta name=viewport content="width=device-width, initial-scale=1">
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-47032953-1', 'mralext20.github.io');
-  ga('send', 'pageview');
-
-</script>
 <title> - ACE12</title>
 <head><a href="index.html">go home</a><center><h2>PAGE TITLE</h2></center></head>
 <body>
 
 </body>
-<footer><a href="mailto:alexterry43@gmail.com">send me an email</a>
+<footer><A HREF="mailto:alexterry43@gmail.com">Click Here To email Me</A></footer>
+</html>
