created thoughts of a yeti
NEW!

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <title>ACE12</title>
 <head><h1><center>ACE12</center></h1></head>
 <body>
-<P>im still getting set up here, bear with me.</p>
-<p><a href="bio.html"> biography's!</a></p>
+<P>here's what we have:</p>
+<li><a href="bio.html"> biography's!
+<li><a href="yeti.html"> thoughts of a yeti!
+</li>
+</li>
 </body>
 <footer><A HREF="mailto:alexterry43@gmail.com">Click Here To email Me</A></footer>
 </html>
