added lists, and link to g+

--- a/alex.html
+++ b/alex.html
@@ -3,7 +3,10 @@
 <title>Alexander Terry - ACE12</title>
 <head><a href="index.html">go home</a><center><h2>Alexander Terry</h2></center></head>
 <body>
-<p>a student at <a href="http://www.matsuk12.us/phs">palmer high school</a></p>
+<li>a student at <a href="http://www.matsuk12.us/phs">palmer high school</a>
+<li><a href="http://www.google.com/plus/+alexanderterry">alexander is also on google +</a>
+</li>
+</li>
 </body>
 <footer><A HREF="mailto:alexterry43@gmail.com">Click Here To email Me</A></footer>
 </html>
