--- a/yeti.html
+++ b/yeti.html
@@ -3,9 +3,10 @@
 <title>Thoughts Of A Yeti - ACE12</title>
 <head><a href="index.html">go home</a><center><h2>Thoughts Of A Yeti</h2></center></head>
 <body>
-<p> this is the story of a yeti, from the point of view if a yeti.</p>
+<p><center><h4>this is the story of a yeti, from the point of view if a yeti.</h4></p>
 <hr size=5>
 <span style="color:darkblue">why are all my friends dyeing?</span> 
+</center>
 </body>
 <footer><A HREF="mailto:alexterry43@gmail.com">Click Here To email Me</A></footer>
 </html>
