--- a/alex.html
+++ b/alex.html
@@ -4,7 +4,7 @@
 <head><a href="index.html">go home</a><center><h2>Alexander Terry</h2></center></head>
 <body>
 <li>a student at <a href="http://www.matsuk12.us/phs">palmer high school</a>
-<li><a href="http://www.google.com/plus/+alexanderterry">alexander is also on google +</a>
+<li><a href="https://plus.google.com/u/0/+AlexanderTerry">alexander is also on google +</a>
 </li>
 </li>
 </body>
