--- a/yeti.html
+++ b/yeti.html
@@ -5,7 +5,7 @@
 <body>
 <p><center><h4>this is the story of a yeti, from the point of view if a yeti.</h4></p>
 <hr size=5>
-<span style="color:darkblue">why are all my friends dyeing?</span> 
+<u></u><span style="color:blue">why are all my friends dyeing?</span></u>
 </center>
 </body>
 <footer><A HREF="mailto:alexterry43@gmail.com">Click Here To email Me</A></footer>
