--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <meta name=viewport content="width=device-width, initial-scale=1">
 <title>ACE12</title>
-<head><p style="background-image:URL('header.png');background-repeat:no-repeat;background-position:center center;>ACE12</P></head>
+<head><center><h2><p>ACE12</P></h2></center></head>
 <body>
 <P>here's what we have:</p>
 <li><a href="bio.html"> biography's!
