--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head><center><h2><p>ACE12</P></h2></center></head>
 <body>
 <P>here's what we have:</p>
-<li><a href="bio.html"> biography's!
-<li><a href="yeti.html"> thoughts of a yeti!
+<li><a href="bio.html"> biography's!</a>
+<li><a href="yeti.html">thoughts of a yeti!</a>
+<li><a href="android.html">android!</a>
 </li>
 </li>
 </body>
