--- a/yeti.html
+++ b/yeti.html
@@ -1,10 +1,10 @@
 <html>
 <meta name=viewport content="width=device-width, initial-scale=1">
 <title>Thoughts Of A Yeti - ACE12</title>
-<head><a href="index.html">go home</a><center><h2>Thoughts Of A Yeti</h2></center></head>
+<head><a href="index.html">go home</a><center><h2><marquee><span style="color:red">Thoughts Of A Yeti</span></marquee></h2></center></head>
 <body>
-<p><center><h4>this is the story of a yeti, from the point of view if a yeti.</h4></p>
-<hr size=5>
+<p><center><h3><span>this is the story of a yeti, from the point of view of that same yeti.</h3></p>
+<hr>
 <u></u><span style="color:blue">why are all my friends dyeing?</span></u>
 </center>
 </body>
