--- a/android.html
+++ b/android.html
@@ -1,4 +1,14 @@
 <html>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-47032953-1', 'mralext20.github.io');
+  ga('send', 'pageview');
+
+</script>
 <meta name=viewport content="width=device-width, initial-scale=1">
 <title> - ACE12</title>
 <body vlink="#9933CC"><p><a href="index.html">go home</a><center><h2><span style="color:#33B5E5">android</span></h2></center></p>
