--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </script>
 <meta name=viewport content="width=device-width, initial-scale=1">
 <title>ACE12</title>
-<head><center><h2><img src="ACE12.JPG" alt="Click Links" height="100"></h2></center></head>
+<head><center><h2><img src="ACE12.JPG" alt="Click Links"  width="158" height="100"></h2></center></head>
 <body>
 <P>here's what we have:</p>
 <li><a href="bio.html"> biography's!</a>
