--- a/index.html
+++ b/index.html
@@ -20,5 +20,5 @@
 </li>
 </li>
 </body>
-<footer><A HREF="mailto:alexterry43@gmail.com">Click Here To email Me</A></footer>
+<footer><A HREF="mailto:alexterry43@gmail.com">Click Here To email the sight manager</A></footer>
 </html>
