--- a/jordan.html
+++ b/jordan.html
@@ -16,5 +16,5 @@
 <li> a student at <a href="http://www.matsuk12.us/phs">palmer high school</a>
 </LI></center>
 </body>
-<footer><A HREF="mailto:alexterry43@gmail.com">Click Here To email Me</A></footer>
+<footer><A HREF="mailto:possiblyinfinite4@gmail.com">Click Here To email Me</A></footer>
 </html>
