fix image and template

--- a/template.html
+++ b/template.html
@@ -11,7 +11,11 @@
 </script>
 <meta name=viewport content="width=device-width, initial-scale=1">
 <title> - ACE12</title>
-<head><a href="index.html">go home</a><center><h2>PAGE TITLE</h2></center></head>
+<head><a href="index.html"><p>
+    <p>go home</a><center><h2>
+    <img src="assets/ACE12.JPG" width="158" height="100">
+    <p>
+    PAGE TITLE</h2></center></head></p>
 <body>
 
 </body>
