--- a/navbar.html
+++ b/navbar.html
@@ -9,12 +9,8 @@
   ga('send', 'pageview');
 
 </script>
-<title>ACE12-Beta</title>
-<frameset border="1" rows="20%,*">
-<frame noresize name="UpperFrame" src="title.html" scrolling="no">
-<frameset border="1" cols="180,*">
-<frame noresize name="LeftFrame" src="navbar.html">
-<frame noresize name="RightFrame" src="welcome.html">
-</frameset>
-</frameset>
+<meta name=viewport content="width=device-width, initial-scale=1">
+<body>
+    <a href="bio.html" target="rightframe">biographys</a>
+</body>
 </html>
