--- a/title.html
+++ b/title.html
@@ -9,12 +9,14 @@
   ga('send', 'pageview');
 
 </script>
-<title>ACE12-Beta</title>
-<frameset border="1" rows="20%,*">
-<frame noresize name="UpperFrame" src="title.html" scrolling="no">
-<frameset border="1" cols="180,*">
-<frame noresize name="LeftFrame" src="navbar.html">
-<frame noresize name="RightFrame" src="welcome.html">
-</frameset>
-</frameset>
+<meta name=viewport content="width=device-width, initial-scale=1">
+<title> - ACE12</title>
+<p>
+    <center><h2>
+    <img src="assets/ACE12.JPG" width="158" height="100">
+    <p>
+    </h2></center></head></p>
+<body>
+
+</body>
 </html>
