--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
 <title>ACE12</title>
     <head><center><h2><img src="assets/ACE12.JPG" alt="Click Links"  width="112" height="100"></h2></center></head>
 <body>
-<P>here's what we have:</p>
-<li><a href="bio.html"> biography's!</a>
-<li><a href="yeti.html">thoughts of a yeti!</a>
-<li><a href="android.html">android!</a>
-</li>
-</li>
+<P>here's what we have:
+    <li><a href="bio.html"> biography's!</a>
+    <li><a href="yeti.html">thoughts of a yeti!</a></li>
+    <li><a href="android.html">android!</a></li>
 </body>
 <footer><A HREF="mailto:alexterry43@gmail.com">Click Here To email the site manager</A></footer>
 </html>
