adding a google plus buutton to the homepage, more will follow.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
     <li><a href="bio.html"> biography's!</a>
     <li><a href="yeti.html">thoughts of a yeti!</a></li>
     <li><a href="android.html">android!</a></li>
+<!-- Place this tag where you want the +1 button to render. -->
+<div class="g-plusone" data-annotation="inline" data-width="300" data-href="https://plus.google.com/107747753008946199043"></div>
+
+<!-- Place this tag after the last +1 button tag. -->
+<script type="text/javascript">
+  (function() {
+    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+    po.src = 'https://apis.google.com/js/platform.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+  })();
+</script>
 </body>
 <footer><A HREF="mailto:alexterry43@gmail.com">Click Here To email the site manager</A></footer>
 </html>
