--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <li><a href="yeti.html">thoughts of a yeti!</a></li>
     <li><a href="android.html">android!</a></li>
 <!-- Place this tag where you want the +1 button to render. -->
-<div class="g-plusone" data-annotation="inline" data-width="300" data-href="https://plus.google.com/107747753008946199043"></div>
-
+<div class="g-plusone" data-annotation="inline" data-width="300" data-href="https://plus.google.com/107747753008946199043"></div> or, <a href="https://twitter.com/ACE12USA" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @ACE12USA</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 <!-- Place this tag after the last +1 button tag. -->
 <script type="text/javascript">
   (function() {
