--- a/index.html
+++ b/index.html
@@ -1,33 +1,54 @@
 <html>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-47032953-1', 'mralext20.github.io');
-  ga('send', 'pageview');
+<head>
+    <link rel="stylesheet" type="text/css" href="mystyle.css">
+    <script>
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+        ga('create', 'UA-47032953-1', 'mralext20.github.io');
+        ga('send', 'pageview');
+    </script>
+    <meta name=viewport content="width=device-width, initial-scale=1">
+    <title>ACE12</title>
+</head>
 
-</script>
-<meta name=viewport content="width=device-width, initial-scale=1">
-<title>ACE12</title>
-    <head><center><h2><img src="assets/ACE12.JPG" alt="Click Links"  width="112" height="100"></h2></center></head>
 <body>
-<P>here's what we have:
-    <li><a href="bio.html"> biography's!</a>
-    <li><a href="yeti.html">thoughts of a yeti!</a></li>
-    <li><a href="android.html">android!</a></li>
-<!-- Place this tag where you want the +1 button to render. -->
-<div class="g-plusone" data-annotation="inline" data-width="300" data-href="https://plus.google.com/107747753008946199043"></div> or, <a href="https://twitter.com/ACE12USA" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @ACE12USA</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-<!-- Place this tag after the last +1 button tag. -->
-<script type="text/javascript">
-  (function() {
-    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-    po.src = 'https://apis.google.com/js/platform.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-  })();
-</script>
+    <center>
+        <h2><img src="assets/ACE12.JPG" alt="Click Links"  width="112" height="100"></h2>
+    </center>
+    <P>here's what we have:
+        <li><a href="bio.html"> biography's!</a>
+            <li><a href="yeti.html">thoughts of a yeti!</a>
+            </li>
+            <li><a href="android.html">android!</a>
+            </li>
+            <!-- Place this tag where you want the +1 button to render. -->
+            <a href="https://twitter.com/ACE12USA" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @ACE12USA</a> or,
+            <div class="g-plusone" data-annotation="inline" data-width="300" data-href="https://plus.google.com/107747753008946199043"></div>
+
+            <!-- Place this tag after the last +1 button tag. -->
+            <script type="text/javascript">
+                (function() {
+                    var po = document.createElement('script');
+                    po.type = 'text/javascript';
+                    po.async = true;
+                    po.src = 'https://apis.google.com/js/platform.js';
+                    var s = document.getElementsByTagName('script')[0];
+                    s.parentNode.insertBefore(po, s);
+                })();
+            </script>
 </body>
-<footer><A HREF="mailto:alexterry43@gmail.com">Click Here To email the site manager</A></footer>
+<footer>
+    <A HREF="mailto:alexterry43@gmail.com">Click Here To email the site manager</A>
+</footer>
+
 </html>
