--- a/terms_and_conditions.html
+++ b/terms_and_conditions.html
@@ -18,24 +18,25 @@
         ga('send', 'pageview');
     </script>
     <meta name=viewport content="width=device-width, initial-scale=1">
-    <title>- ACE12</title>
-
+    <title>Terms And Conditions - ACE12</title>
 </head>
 
-<body>
+<body class="center">
     <a href="index.html">
-        <p>go home</a>
+        <p>
+            <p>go home</a>
     <center>
         <h2>
     <img src="assets/ACE12.JPG" width="158" height="100">
-    <p><span style="color:blue">river Parpana </span></h2>
+    <p>
+    Terms And Conditions</h2>
     </center>
     </p>
-    <center><span class="red large">river is our main sorce of artwork.</span>
-    </center>
+    Welcome to our website.
+    <p>This site is currently a personal project and as such we currently share no association or afilliations to any other brand or companyddany mentions of these is purrly personal opinyions and ideas about such.
 </body>
 <footer>
-    <A HREF="mailto:alexterry43@gmail.com">Click Here To email Me</A>
+    <A HREF="mailto:alexterry43@gmail.com">Click Here To email the site manager</A>
 </footer>
 
 </html>
