--- a/alex.html
+++ b/alex.html
@@ -1,22 +1,38 @@
 <html>
-<meta name=viewport content="width=device-width, initial-scale=1">
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-47032953-1', 'mralext20.github.io');
-  ga('send', 'pageview');
+<head>
+    <meta name=viewport content="width=device-width, initial-scale=1">
+    <script>
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+        ga('create', 'UA-47032953-1', 'mralext20.github.io');
+        ga('send', 'pageview');
+    </script>
+    <title>Alexander Terry - ACE12</title>
+</head>
 
-</script>
-<title>Alexander Terry - ACE12</title>
-<head><a href="index.html">go home</a><center><h2>Alexander Terry</h2></center></head>
 <body>
-<li>a student at <a href="http://www.matsuk12.us/phs">palmer high school</a>
-<li><a href="https://plus.google.com/u/0/+AlexanderTerry">alexander is also on google +</a>
-</li>
-</li>
+    <a href="index.html">go home</a>
+    <center>
+        <h2>Alexander Terry</h2>
+    </center>
+
+    <li>a student at <a href="http://www.matsuk12.us/phs">palmer high school</a>
+        <li><a href="https://plus.google.com/u/0/+AlexanderTerry">alexander is also on google +</a>
+        </li>
+
 </body>
-<footer><A HREF="mailto:alexterry43@gmail.com">Click Here To email Me</A></footer>
+<footer>
+    <A HREF="mailto:alexterry43@gmail.com">Click Here To email Me</A>
+</footer>
+
 </html>
