--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 </head>
 
 <body>
-    <center>
+    <span style="text-align:center">
         <h2><img src="assets/ACE12.JPG" alt="Click Links"  width="112" height="100"></h2>
-    </center>
+    </span>
     <P>here's what we have:
         <li><a href="bio.html"> biography's!</a>
             <li><a href="yeti.html">thoughts of a yeti!</a>
