--- a/river.html
+++ b/river.html
@@ -31,7 +31,7 @@
     <p><span style="color:blue">river Parpana </span></h2>
     </center>
     </p>
-    <center><span class="red large">river is our main sorce of artwork.</span>
+    <center><span style="color:red">river is our main sorce of artwork.</span>
     </center>
 </body>
 <footer>
