--- a/yeti.html
+++ b/yeti.html
@@ -24,15 +24,15 @@
 <body>
     <a href="index.html">go home</a>
     <center>
-        <h2><marquee><span class="red">Thoughts Of A Yeti</span></marquee></h2>
+        <h2><marquee><span style="color:red">Thoughts Of A Yeti</span></marquee></h2>
     </center>
 
     <p>
         <center>
-            <h3><span class="blue">this is the story of a yeti, from the point of view of that same yeti.</h3>
+            <h3><span style="color:blue">this is the story of a yeti, from the point of view of that same yeti.</h3>
     </p>
     <hr>
-    <u><span class="red">why are all my friends dyeing?</span></u>
+    <u><span style="color:red">why are all my friends dyeing?</span></u>
     </center>
 </body>
 <footer>
