--- a/terms_and_conditions.html
+++ b/terms_and_conditions.html
@@ -2,6 +2,13 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
+    <style>
+        .roboto {
+            font-family: 'Roboto Condensed', sans-serif;
+            font-weight: 400;
+        }
+    </style>
     <script>
         (function(i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
@@ -21,19 +28,16 @@
     <title>Terms And Conditions - ACE12</title>
 </head>
 
-<body class="center">
+<body>
     <a href="index.html">
-        <p>
-            <p>go home</a>
-    <center>
-        <h2>
-    <img src="assets/ACE12.JPG" width="158" height="100">
-    <p>
-    Terms And Conditions</h2>
-    </center>
-    </p>
-    Welcome to our website.
-    <p>This site is currently a personal project and as such we currently share no association or afilliations to any other brand or companyddany mentions of these is purrly personal opinyions and ideas about such.
+        <p>go home</a>
+
+    <h2 style="text-align:center">
+        <img style="text-align:center" src="assets/ACE12.JPG" width="158" height="100">
+            <p>
+                Terms And Conditions</p></h2>
+    <p style="text-align:center">Welcome to our website.</p>
+    <p class="roboto">This site is currently a personal project and as such we currently share no association or afilliations to any other brand or companyddany mentions of these is purrly personal opinons and ideas about such.
 </body>
 <footer>
     <A HREF="mailto:alexterry43@gmail.com">Click Here To email the site manager</A>
