--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
             <!-- Place this tag where you want the +1 button to render. -->
             <a href="https://twitter.com/ACE12USA" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @ACE12USA</a> or,
             <div class="g-plusone" data-annotation="inline" data-width="300" data-href="https://plus.google.com/107747753008946199043"></div>
-
             <!-- Place this tag after the last +1 button tag. -->
             <script type="text/javascript">
                 (function() {
@@ -46,9 +45,41 @@
                     s.parentNode.insertBefore(po, s);
                 })();
             </script>
+            <div id="disqus_thread"></div>
+            <script type="text/javascript">
+                /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+                var disqus_shortname = 'ace12'; // required: replace example with your forum shortname
+                /* * * DON'T EDIT BELOW THIS LINE * * */
+                 (function() {
+                    var dsq = document.createElement('script');
+                    dsq.type = 'text/javascript';
+                    dsq.async = true;
+                    dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                })();
+            </script>
+            <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a>
+            </noscript>
+            <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+
+            <script type="text/javascript">
+                /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+                var disqus_shortname = 'ace12'; // required: replace example with your forum shortname
+                /* * * DON'T EDIT BELOW THIS LINE * * */
+                 (function() {
+                    var s = document.createElement('script');
+                    s.async = true;
+                    s.type = 'text/javascript';
+                    s.src = '//' + disqus_shortname + '.disqus.com/count.js';
+                    (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+                }());
+            </script>
+
 </body>
 <footer>
-    <A HREF="mailto:alexterry43@gmail.com">Click Here To email the site manager</A>
+    <span style="text-align:left"><A HREF="mailto:alexterry43@gmail.com">Click Here To email the site manager</A></span> 
+    <span style="text-align:right"> <a href="terms_and_conditions.html">term and conditions</a>
+    </span>
 </footer>
 
 </html>
