update, i dont even know what

--- a/terms_and_conditions.html
+++ b/terms_and_conditions.html
@@ -33,7 +33,7 @@
         <p>go home</a>
 
     <h2 style="text-align:center">
-        <img style="text-align:center" src="assets/ACE12.JPG" width="158" height="100">
+        <img style="text-align:center" src="assets/ace12.jpg" width="158" height="100">
             <p>
                 Terms And Conditions</p></h2>
     <p style="text-align:center">Welcome to our website.</p>
