--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
     <span style="text-align:center">
-        <h2><img src="assets/ACE12.JPG" alt="Click Links"  width="112" height="100"></h2>
+        <h2><img src="assets/ace12.jpg" alt="Click Links"  width="112" height="100"></h2>
     </span>
     <P>here's what we have:
         <li><a href="bio.html"> biography's!</a>
