--- a/river.html
+++ b/river.html
@@ -27,7 +27,7 @@
         <p>go home</a>
     <center>
         <h2>
-    <img src="assets/ACE12.JPG" width="158" height="100">
+    <img src="assets/ace12.jpg" width="158" height="100">
     <p><span style="color:blue">river Parpana </span></h2>
     </center>
     </p>
