add doctype to begining of files

--- a/terms_and_conditions.html
+++ b/terms_and_conditions.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -5,7 +6,7 @@
     <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed' rel='stylesheet' type='text/css'>
     <style>
         .roboto {
-            font-family: 'Roboto Condensed', sans-serif;
+            font-family:'Roboto Condensed', sans-serif;
             font-weight: 400;
         }
     </style>
