--- a/index.html
+++ b/index.html
@@ -47,11 +47,12 @@
                 })();
             </script>
 
-</body>
-<footer>
-    <span style="text-align:left"><A HREF="mailto:alexterry43@gmail.com">Click Here To email the site manager</A></span> 
-    <span style="text-align:right"> <a href="terms_and_conditions.html">term and conditions</a>
+            <span style="text-align:left"><A HREF="mailto:alexterry43@gmail.com">Click Here To email the site manager</A></span> 
+            <span style="text-align:right"> <a href="terms_and_conditions.html">term and conditions</a>
     </span>
-</footer>
+    <p>
+        somethings may not apper correctly if you are not using <a href="https://www.google.com/intl/en/chrome/browser/">Google Chrome.</a> plese use a more modern browser.
+    </p>
+</body>
 
 </html>
