show message only if useing ie 7

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
             <span style="text-align:left"><A HREF="mailto:alexterry43@gmail.com">Click Here To email the site manager</A></span> 
             <span style="text-align:right"> <a href="terms_and_conditions.html">term and conditions</a>
     </span>
-    <p>
-        somethings may not apper correctly if you are not using <a href="https://www.google.com/intl/en/chrome/browser/">Google Chrome.</a> plese use a more modern browser.
-    </p>
+    <!--[if lt msie]>
+    <p>You are using an <strong>outdated</strong> browser. Please <a href="www.google.com/chrome/">try Google Chrome</a> to improve your experience.</p>
+<![endif]-->
 </body>
 
 </html>
