change the header image

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
     <span style="text-align:center">
-        <h2><img src="assets/ace12.jpg" alt="Click Links"  width="112" height="100"></h2>
+        <h2><img src="assets/newlogo.jpg" alt="Click Links"  width="200" height="150"></h2>
     </span>
     <P>here's what we have:
         <li><a href="bio.html"> biography's!</a>
