remove the unnecessary heading tags

--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
 
 <body>
     <span style="text-align:center">
-        <h2><img src="assets/ace12.jpg" alt="Click Links" height="150" width="325">
-    </h2>
-        </span>
+        <img src="assets/ace12.jpg" alt="Click Links" height="150" width="325">
+    </span>
     <P>here's what we have:
         <li><a href="bio.html"> biography's!</a>
             <li><a href="yeti.html">thoughts of a yeti!</a>
