--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="mystyle.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <script>
         (function(i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
@@ -23,9 +23,9 @@
 </head>
 
 <body>
-    <span style="text-align:center">
+    <center>
         <img src="assets/ace12.jpg" alt="Click Links" height="150" width="325">
-    </span>
+    </center>
     <P>here's what we have:
         <li><a href="bio.html"> biography's!</a>
             <li><a href="yeti.html">thoughts of a yeti!</a>
