fix twitter button

--- a/index.html
+++ b/index.html
@@ -33,7 +33,18 @@
             <li><a href="android.html">android!</a>
             </li>
             <!-- Place this tag where you want the +1 button to render. -->
-            <a href="https://twitter.com/ACE12USA" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @ACE12USA</a> or,
+            <a href="https://twitter.com/ace12usa" class="twitter-follow-button" data-show-count="true" data-size="medium">Follow @ACE12USA</a>
+            <script>
+                ! function(d, s, id) {
+                    var js, fjs = d.getElementsByTagName(s)[0];
+                    if(!d.getElementById(id)) {
+                        js = d.createElement(s);
+                        js.id = id;
+                        js.src = "//platform.twitter.com/widgets.js";
+                        fjs.parentNode.insertBefore(js, fjs);
+                    }
+                }(document, "script", "twitter-wjs");
+            </script> or,
             <div class="g-plusone" data-annotation="inline" data-width="300" data-href="https://plus.google.com/107747753008946199043"></div>
             <!-- Place this tag after the last +1 button tag. -->
             <script type="text/javascript">
