--- a/river.html
+++ b/river.html
@@ -19,7 +19,7 @@
         ga('send', 'pageview');
     </script>
     <meta name=viewport content="width=device-width, initial-scale=1">
-    <title>- ACE12</title>
+    <title>River Parpana - ACE12</title>
 
 </head>
 
