--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <!--google anylitics code-->
     <script>
         (function(i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
@@ -18,6 +19,7 @@
         ga('create', 'UA-47032953-1', 'mralext20.github.io');
         ga('send', 'pageview');
     </script>
+    <!--resize everything to fit most screensizes-->
     <meta name=viewport content="width=device-width, initial-scale=1">
     <title>ACE12</title>
 </head>
@@ -32,7 +34,6 @@
             </li>
             <li><a href="android.html">android!</a>
             </li>
-            <!-- Place this tag where you want the +1 button to render. -->
             <a href="https://twitter.com/ace12usa" class="twitter-follow-button" data-show-count="true" data-size="medium">Follow @ACE12USA</a>
             <script>
                 ! function(d, s, id) {
@@ -44,9 +45,9 @@
                         fjs.parentNode.insertBefore(js, fjs);
                     }
                 }(document, "script", "twitter-wjs");
-            </script> or,
+            </script>or,
             <div class="g-plusone" data-annotation="inline" data-width="300" data-href="https://plus.google.com/107747753008946199043"></div>
-            <!-- Place this tag after the last +1 button tag. -->
+            <!-- +1 button code -->
             <script type="text/javascript">
                 (function() {
                     var po = document.createElement('script');
@@ -60,9 +61,9 @@
 
             <span style="text-align:left"><A HREF="mailto:alexterry43@gmail.com">Click Here To email the site manager</A></span> 
             <span style="text-align:right"> <a href="terms_and_conditions.html">term and conditions</a>
-    </span>
+	</span>
             <!--[if lt msie]>
-    <p>You are using an <strong>outdated</strong> browser. Please <a href="www.google.com/chrome/">try Google Chrome</a> to improve your experience.</p>
+<p>You are using an <strong>outdated</strong> browser. Please <a href="www.google.com/chrome/">try Google Chrome</a> to improve your experience.</p>
 <![endif]-->
 </body>
 
