--- a/index.html
+++ b/index.html
@@ -28,41 +28,45 @@
     <center>
         <img src="assets/ace12.jpg" alt="Click Links" height="150" width="325">
     </center>
-    <P>here's what we have:
-        <li><a href="bio.html"> biography's!</a>
-            <li><a href="yeti.html">thoughts of a yeti!</a>
-            </li>
-            <li><a href="android.html">android!</a>
-            </li>
-            <a href="https://twitter.com/ace12usa" class="twitter-follow-button" data-show-count="true" data-size="medium">Follow @ACE12USA</a>
-            <script>
-                ! function(d, s, id) {
-                    var js, fjs = d.getElementsByTagName(s)[0];
-                    if(!d.getElementById(id)) {
-                        js = d.createElement(s);
-                        js.id = id;
-                        js.src = "//platform.twitter.com/widgets.js";
-                        fjs.parentNode.insertBefore(js, fjs);
-                    }
-                }(document, "script", "twitter-wjs");
-            </script>or,
-            <div class="g-plusone" data-annotation="inline" data-width="300" data-href="https://plus.google.com/107747753008946199043"></div>
-            <!-- +1 button code -->
-            <script type="text/javascript">
-                (function() {
-                    var po = document.createElement('script');
-                    po.type = 'text/javascript';
-                    po.async = true;
-                    po.src = 'https://apis.google.com/js/platform.js';
-                    var s = document.getElementsByTagName('script')[0];
-                    s.parentNode.insertBefore(po, s);
-                })();
-            </script>
-
-            <span style="text-align:left"><A HREF="mailto:alexterry43@gmail.com">Click Here To email the site manager</A></span> 
-            <span style="text-align:right"> <a href="terms_and_conditions.html">term and conditions</a>
-	</span>
-            <!--[if lt msie]>
+    <P class="text_show">here's what we have:
+        <li class="text_show"><a href="bio.html"> biography's!</a>
+        </li>
+        <li class="text_show"><a href="yeti.html">thoughts of a yeti!</a>
+        </li>
+        <li class="text_show"><a href="android.html">android!</a>
+        </li><span class="hide">a</span>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="https://twitter.com/ace12usa" class="twitter-follow-button" style="text-indent:800px" data-show-count="true" data-size="medium">Follow @ACE12USA</a>
+        <script>
+            ! function(d, s, id) {
+                var js, fjs = d.getElementsByTagName(s)[0];
+                if(!d.getElementById(id)) {
+                    js = d.createElement(s);
+                    js.id = id;
+                    js.src = "//platform.twitter.com/widgets.js";
+                    fjs.parentNode.insertBefore(js, fjs);
+                }
+            }(document, "script", "twitter-wjs");
+        </script>or,
+        <div class="g-plusone text_show" data-annotation="inline" data-width="300" data-href="https://plus.google.com/107747753008946199043"></div>
+        <!-- +1 button code -->
+        <script type="text/javascript">
+            (function() {
+                var po = document.createElement('script');
+                po.type = 'text/javascript';
+                po.async = true;
+                po.src = 'https://apis.google.com/js/platform.js';
+                var s = document.getElementsByTagName('script')[0];
+                s.parentNode.insertBefore(po, s);
+            })();
+        </script>
+        <br>
+    <center>
+        <span class="text_show"><A HREF="mailto:alexterry43@gmail.com">Click Here To email the site manager</A></span> 
+        <span class="text_show"> <a href="terms_and_conditions.html">term and conditions</a>
+    </span>
+        </center>
+        <!--[if lt msie]>
 <p>You are using an <strong>outdated</strong> browser. Please <a href="www.google.com/chrome/">try Google Chrome</a> to improve your experience.</p>
 <![endif]-->
 </body>
