--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <center>
         <img src="assets/ace12.jpg" alt="Click Links" height="150" width="325">
     </center>
-    <P class="text_show">here's what we have:
+    <P class="text_show">directorys
         <li class="text_show"><a href="bio.html"> biography's!</a>
         </li>
         <li class="text_show"><a href="yeti.html">thoughts of a yeti!</a>
@@ -61,11 +61,12 @@
             })();
         </script>
         <br>
-    <center>
-        <span class="text_show"><A HREF="mailto:alexterry43@gmail.com">Click Here To email the site manager</A></span> 
-        <span class="text_show"> <a href="terms_and_conditions.html">term and conditions</a>
-    </span>
-        </center>
+        <span class="text_show align_left">
+                <A HREF="mailto:alexterry43@gmail.com">Click Here To email the site manager</A></span>
+        <span class="text_show align_right">
+                    <a href="terms_and_conditions.html">term and conditions</a>
+                </span>
+
         <!--[if lt msie]>
 <p>You are using an <strong>outdated</strong> browser. Please <a href="www.google.com/chrome/">try Google Chrome</a> to improve your experience.</p>
 <![endif]-->
