--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <center>
         <img src="assets/ace12.jpg" alt="Click Links" height="150" width="325">
     </center>
-    <P class="text_show">directorys
+    <P class="text_show">directorys:
         <li class="text_show"><a href="bio.html"> biography's!</a>
         </li>
         <li class="text_show"><a href="yeti.html">thoughts of a yeti!</a>
