--- a/index.html
+++ b/index.html
@@ -61,12 +61,16 @@
             })();
         </script>
         <br>
-        <span class="text_show align_left">
-                <A HREF="mailto:alexterry43@gmail.com">Click Here To email the site manager</A></span>
-        <span class="text_show align_right">
-                    <a href="terms_and_conditions.html">term and conditions</a>
-                </span>
-
+	 <table class="bottom">
+		 <tr>
+			 <td class="align_left" style="padding:20px;">
+				 <A HREF="mailto:alexterry43@gmail.com">Click Here To email the site manager</A>
+			 </td>
+			 <td class="align_right" style="padding:20px;">
+				 <a href="terms_and_conditions.html">term and conditions</a>
+			 </td>
+		 </tr>
+	 </table>
         <!--[if lt msie]>
 <p>You are using an <strong>outdated</strong> browser. Please <a href="www.google.com/chrome/">try Google Chrome</a> to improve your experience.</p>
 <![endif]-->
