--- a/internal/how_to_commit.html
+++ b/internal/how_to_commit.html
@@ -5,7 +5,7 @@
 
     <p>
 
-        first, goto the terminal, either by clicking on tools, then terminal. you can also use the keystroke <code>shift+alt+t</code>
+        first, go to the terminal, either by clicking on tools, then terminal. you can also use the keystroke <code>shift+alt+t</code>
     </p>
     <p>
 
@@ -21,10 +21,10 @@
     </p>
     <p>
 
-        now, we need to acctualy commit the changes. simply run <code>git commit</code> to do that.</p>
+        now, we need to actually commit the changes. simply run <code>git commit</code> to do that.</p>
     <p>
 
-        when you are sure the master is stable, go back to the terminal and run <code>git push</code> . that will send your chanes to github.com.</p>
+        when you are sure the master is stable, go back to the terminal and run <code>git push</code> . that will send your chances to github.com.</p>
 </body>
 
 </html>
