--- a/index.html
+++ b/index.html
@@ -61,16 +61,16 @@
             })();
         </script>
         <br>
-	 <table class="bottom">
-		 <tr>
-			 <td class="align_left" style="padding:20px;">
-				 <A HREF="mailto:alexterry43@gmail.com">Click Here To email the site manager</A>
-			 </td>
-			 <td class="align_right" style="padding:20px;">
-				 <a href="terms_and_conditions.html">term and conditions</a>
-			 </td>
-		 </tr>
-	 </table>
+        <table class="bottom" border="0" bgcolor="#6C5033">
+            <tr>
+                <td class="align_left" style="padding:0px;">
+                    <A HREF="mailto:alexterry43@gmail.com">Click Here To email the site manager</A>
+                </td>
+                <td class="align_right" style="padding:0px;">
+                    <a href="terms_and_conditions.html">term and conditions</a>
+                </td>
+            </tr>
+        </table>
         <!--[if lt msie]>
 <p>You are using an <strong>outdated</strong> browser. Please <a href="www.google.com/chrome/">try Google Chrome</a> to improve your experience.</p>
 <![endif]-->
