--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             })();
         </script>
         <br>
-        <table class="bottom" border="0" bgcolor="#6C5033">
+        <table class="bottom" border="0" bgcolor="#333333">
             <tr>
                 <td class="align_left" style="padding:0px;">
                     <A HREF="mailto:alexterry43@gmail.com">Click Here To email the site manager</A>
