--- a/index.html
+++ b/index.html
@@ -24,9 +24,73 @@
     <title>ACE12</title>
 </head>
 
-<body>
+<body class="no_margin">
+    <table border="1" bgcolor="#221e11" class="widescreen table_boarder">
+        <tr>
+            <td width="75%">
+                <center>
+                    <img src="assets/ace12.jpg" alt="Click Links" height="150" width="325">
+                </center>
+            </td>
+
+            <td>
+                <table class="widescreen" border="1" cellpadding="10">
+                    <tr>
+                        <td>
+                            <a href="https://twitter.com/ace12usa" class="twitter-follow-button" style="text-indent:800px" data-show-count="true" data-size="medium">Follow @ACE12USA</a>
+                            <script>
+                                ! function(d, s, id) {
+                                    var js, fjs = d.getElementsByTagName(s)[0];
+                                    if(!d.getElementById(id)) {
+                                        js = d.createElement(s);
+                                        js.id = id;
+                                        js.src = "//platform.twitter.com/widgets.js";
+                                        fjs.parentNode.insertBefore(js, fjs);
+                                    }
+                                }(document, "script", "twitter-wjs");
+                            </script>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td bgcolor="#222111">
+                            <!-- +1 button-->
+                            <div class="g-plusone text_show" data-annotation="inline" data-width="300" data-href="https://plus.google.com/107747753008946199043"></div>
+                            <script type="text/javascript">
+                                (function() {
+                                    var po = document.createElement('script');
+                                    po.type = 'text/javascript';
+                                    po.async = true;
+                                    po.src = 'https://apis.google.com/js/platform.js';
+                                    var s = document.getElementsByTagName('script')[0];
+                                    s.parentNode.insertBefore(po, s);
+                                })();
+                            </script>
+                            <br>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+        <tr>
+            <td width="25%">
+                <a href="index.html">Home</a>
+            </td>
+            <td width="25%">
+                <a href="bio.html">bios</a>
+            </td>
+            <td width="25%">
+                <a href="bio.html">bios</a>
+            </td>
+        </tr>
+    </table>
     <center>
-        <img src="assets/ace12.jpg" alt="Click Links" height="150" width="325">
+        <table class="fiddycent" border="1" bgcolor="#221e11">
+            <tr>
+                <td>
+                    <font color="#ffffff"> Your mom</font>
+                </td>
+            </tr>
+        </table>
     </center>
     <P class="text_show">directorys:
         <li class="text_show"><a href="bio.html"> biography's!</a>
@@ -35,33 +99,8 @@
         </li>
         <li class="text_show"><a href="android.html">android!</a>
         </li><span class="hide">a</span>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="https://twitter.com/ace12usa" class="twitter-follow-button" style="text-indent:800px" data-show-count="true" data-size="medium">Follow @ACE12USA</a>
-        <script>
-            ! function(d, s, id) {
-                var js, fjs = d.getElementsByTagName(s)[0];
-                if(!d.getElementById(id)) {
-                    js = d.createElement(s);
-                    js.id = id;
-                    js.src = "//platform.twitter.com/widgets.js";
-                    fjs.parentNode.insertBefore(js, fjs);
-                }
-            }(document, "script", "twitter-wjs");
-        </script>or,
-        <div class="g-plusone text_show" data-annotation="inline" data-width="300" data-href="https://plus.google.com/107747753008946199043"></div>
-        <!-- +1 button code -->
-        <script type="text/javascript">
-            (function() {
-                var po = document.createElement('script');
-                po.type = 'text/javascript';
-                po.async = true;
-                po.src = 'https://apis.google.com/js/platform.js';
-                var s = document.getElementsByTagName('script')[0];
-                s.parentNode.insertBefore(po, s);
-            })();
-        </script>
-        <br>
-        <table class="bottom" border="0" bgcolor="#333333">
+
+        <table class="bottom widescreen" bgcolor="#06266f">
             <tr>
                 <td class="align_left" style="padding:0px;">
                     <A HREF="mailto:alexterry43@gmail.com">Click Here To email the site manager</A>
