--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <table class="fiddycent" border="1" bgcolor="#221e11">
             <tr>
                 <td>
-                    <font color="#ffffff"> Your mom</font>
+                    <font color="#ffffff">we make videos.</font>
                 </td>
             </tr>
         </table>
