--- a/gallery.html
+++ b/gallery.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 
 <head>
@@ -21,22 +20,22 @@
     </script>
     <!--resize everything to fit most screensizes-->
     <meta name=viewport content="width=device-width, initial-scale=1">
-    <title>ACE12</title>
+    <title>gallerys - ACE12</title>
 </head>
 
 <body class="no_margin">
     <table border="1" bgcolor="#221e11" class="widescreen table_boarder">
         <tr>
-            <td width="75%" bgcolor="#221e11">
+            <td width="75%" bgcolor="#fff">
                 <center>
-                    <img src="assets/BETTERace12.jpg" alt="Click Links" height="150" width="325">
+                    <img src="assets/ace12.jpg" alt="Click Links" height="150" width="325">
                 </center>
             </td>
 
             <td>
                 <table class="widescreen" border="1" cellpadding="10">
                     <tr>
-                        <td> <!-- twitter button -->
+                        <td>
                             <a href="https://twitter.com/ace12usa" class="twitter-follow-button" style="text-indent:800px" data-show-count="true" data-size="medium">Follow @ACE12USA</a>
                             <script>
                                 ! function(d, s, id) {
@@ -68,78 +67,47 @@
                             <br>
                         </td>
                     </tr>
-                   <!-- <tr>
+                    <tr>
                         <td>
-                            FACEBOOK BUTTON GOES HERE
+                            <!--FACEBOOK BUTTON GOES HERE-->
                         </td>
-                    </tr> -->
+                    </tr>
                 </table>
             </td>
         </tr>
     </table>
     <table border="1" bgcolor="#221e11" class="widescreen table_boarder">
         <tr>
-            <td width="25%" style="text-align:center;">
+            <td width="20%" style="text-align:center;">
                 <a href="index.html">Home</a>
             </td>
-            <td width="25%" style="text-align:center;">
-                <a href="news.html">News</a>
-            </td>
-            <td width="25%" style="text-align:center;">
-                <a href="gallery.html">Gallery</a>
-            </td>
-            <td width="25%" style="text-align:center;">
+            <td width="20%" style="text-align:center;">
                 <a href="bio.html">bios</a>
             </td>
-            <!-- <td width="20%" style="text-align:center;">
+            <td width="20%" style="text-align:center;">
                 <a href="bio.html">bios</a>
-            </td> -->
-        </tr>
-    </table>
-    <table border="1" class="table_spaceing table_boarder" style="position:absolute;
-    right:40px;" bgcolor="#221e11">
-        <tr>
-            <td>
-                <font color="#ffffff">Popular</font>
+            </td>
+            <td width="20%" style="text-align:center;">
+                <a href="bio.html">bios</a>
+            </td>
+            <td width="20%" style="text-align:center;">
+                <a href="bio.html">bios</a>
             </td>
         </tr>
     </table>
-    <center>
-        <table class="half_screen table_boarder" border="1" bgcolor="#221e11" style="margin-top: 20px;">
-            <tr>
-                <td>
-                    <font color="#ffffff">Whats new</font>
-                </td>
-            </tr>
-            <td>
-            <font color="#ffffff"><font size="6">Videos</font></font>
-            </td>
-        </table>
-        <table class="table_spaceing text_center table_boarder" border="1" style="position:absolute;
-    left:40px;" bgcolor="#221e11" >
-            <tr>
-            <td>
-                <font color="#ffffff">comments</font>
-                </td>
-            </tr>
-            <td>
-            <font color="#ffffff">Disqus goes here... maybe</font>
-            </td>
-        </table>
-    </center>
-    <table class="bottom widescreen" bgcolor="#06266f">
-        <tr>
-            <td class="align_left" style="padding:0px;">
-                <A HREF="mailto:alexterry43@gmail.com">Click Here To email the site manager</A>
-            </td>
-            <td class="align_right" style="padding:0px;">
-                <a href="terms_and_conditions.html">disclaimers</a>
-            </td>
-        </tr>
-    </table>
-    <!--[if lt msie]>
+</body>
+<table class="bottom widescreen" bgcolor="#06266f">
+    <tr>
+        <td class="align_left" style="padding:0px;">
+            <A HREF="mailto:alexterry43@gmail.com">Click Here To email the site manager</A>
+        </td>
+        <td class="align_right" style="padding:0px;">
+            <a href="terms_and_conditions.html">disclaimer</a>
+        </td>
+    </tr>
+</table>
+<!--[if lt msie]>
 <p>You are using an <strong>outdated</strong> browser. Please <a href="www.google.com/chrome/">try Google Chrome</a> to improve your experience.</p>
 <![endif]-->
-</body>
 
 </html>
