fix all the things

--- a/index.html
+++ b/index.html
@@ -20,23 +20,26 @@
         ga('send', 'pageview');
     </script>
     <!--resize everything to fit most screensizes-->
-    <meta name=viewport content="width=device-width, initial-scale=1">
+    <meta name=viewport content="width=690, initial-scale=1">
     <title>ACE12</title>
 </head>
 
-<body class="no_margin">
-    <table border="1" bgcolor="#221e11" class="widescreen table_boarder">
+<body class="no_margin" oncontextmenu="return false" style="margin-bottom: 50px;">
+
+
+    <table border="1" bgcolor="#221e11" class="widescreen table_boarder user-scalable=no">
         <tr>
-            <td width="75%" bgcolor="#221e11">
+            <td width="75%" bgcolor="#fff">
                 <center>
-                    <img src="assets/BETTERace12.jpg" alt="Click Links" height="150" width="325">
+                    <img src="assets/ace12.jpg" alt="Click Links" height="150" width="325">
                 </center>
             </td>
 
             <td>
-                <table class="widescreen" border="1" cellpadding="10">
+                <table class="widescreen no_margin" border="1" cellpadding="10" height="159px" width="332px">
                     <tr>
-                        <td> <!-- twitter button -->
+                        <td>
+                            <!-- twitter button -->
                             <a href="https://twitter.com/ace12usa" class="twitter-follow-button" style="text-indent:800px" data-show-count="true" data-size="medium">Follow @ACE12USA</a>
                             <script>
                                 ! function(d, s, id) {
@@ -68,65 +71,77 @@
                             <br>
                         </td>
                     </tr>
-                   <!-- <tr>
+                    <tr>
                         <td>
                             FACEBOOK BUTTON GOES HERE
                         </td>
-                    </tr> -->
+                    </tr>
                 </table>
             </td>
         </tr>
     </table>
     <table border="1" bgcolor="#221e11" class="widescreen table_boarder">
         <tr>
-            <td width="25%" style="text-align:center;">
+            <td width="20%" style="text-align:center;">
                 <a href="index.html">Home</a>
             </td>
-            <td width="25%" style="text-align:center;">
+            <td width="20%" style="text-align:center;">
                 <a href="news.html">News</a>
             </td>
-            <td width="25%" style="text-align:center;">
+            <td width="20%" style="text-align:center;">
                 <a href="gallery.html">Gallery</a>
             </td>
-            <td width="25%" style="text-align:center;">
+            <td width="20%" style="text-align:center;">
                 <a href="bio.html">bios</a>
             </td>
-            <!-- <td width="20%" style="text-align:center;">
+            <td width="20%" style="text-align:center;">
                 <a href="bio.html">bios</a>
-            </td> -->
+            </td>
         </tr>
     </table>
-    <table border="1" class="table_spaceing table_boarder" style="position:absolute;
-    right:40px;" bgcolor="#221e11">
+    <table border="1" class="table_spaceing table_boarder" style="position:relative;
+    left:85%; top:20px;" bgcolor="#221e11">
         <tr>
             <td>
                 <font color="#ffffff">Popular</font>
             </td>
         </tr>
+        <tr>
+            <script>
+                
+            </script>
+        </tr>
+    </table>
+    <table class="table_spaceing text_center table_boarder" border="1" style="position:absolute;
+    left:40px;" bgcolor="#221e11">
+        <tr>
+            <td>
+                <font color="#ffffff">comments</font>
+            </td>
+        </tr>
+        <td>
+            <font color="#ffffff">Disqus goes here... maybe</font>
+        </td>
     </table>
     <center>
-        <table class="half_screen table_boarder" border="1" bgcolor="#221e11" style="margin-top: 20px;">
+        <table class="half_screen table_boarder" border="1" bgcolor="#221e11" style="margin-top: -10px;">
             <tr>
                 <td>
                     <font color="#ffffff">Whats new</font>
                 </td>
             </tr>
             <td>
-            <font color="#ffffff"><font size="6">Videos</font></font>
-            </td>
-        </table>
-        <table class="table_spaceing text_center table_boarder" border="1" style="position:absolute;
-    left:40px;" bgcolor="#221e11" >
-            <tr>
-            <td>
-                <font color="#ffffff">comments</font>
-                </td>
-            </tr>
-            <td>
-            <font color="#ffffff">Disqus goes here... maybe</font>
+                <font color="#ffffff" size="6"><div align="left">Videos</div></font>
+                <br>
             </td>
         </table>
     </center>
+</body>
+
+<!--[if lt msie]>
+<p>You are using an <strong>outdated</strong> browser. Please <a href="www.google.com/chrome/">try Google Chrome</a> to improve your experience.</p>
+<![endif]-->
+<footer>
     <table class="bottom widescreen" bgcolor="#06266f">
         <tr>
             <td class="align_left" style="padding:0px;">
@@ -137,9 +152,6 @@
             </td>
         </tr>
     </table>
-    <!--[if lt msie]>
-<p>You are using an <strong>outdated</strong> browser. Please <a href="www.google.com/chrome/">try Google Chrome</a> to improve your experience.</p>
-<![endif]-->
-</body>
+</footer>
 
 </html>
